--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:              Étoile
 Theme:		    jekyll-theme-etoile
 description:        Magazine Jekyll theme for writers and bloggers.
 url:                # Site base hostname & protocol, e.g. http://example.com
-baseurl:            "" # Site subpath, e.g. /blog
+baseurl:            
 logo_image:
   dark:             # Dark logo e.g logo-dark.svg upload to /uploads/ folder, used in header, mobile navigation and page sidebar About widget
   light:            # Light logo e.g. logo-light.svg upload to /uploads/ folder, used in footer About widget
